<resources>
    <string name="app_name">CardiacRecorder</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="confirm_password">confirm password</string>
    <string name="password">password at least 8 character</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="sign_up">sign Up</string>
    <string name="sign_in">sign in</string>
    <string name="phone_number">Phone</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="record">User Records</string>
    <string name="update_record">Update</string>
    <string name="delete">Delete</string>
    <string name="comment">Comment</string>
    <string name="diastolic_pressure">Diastolic Pressure</string>
    <string name="systolic_pressure">Systolic Pressure</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="time_">Time:</string>
    <string name="date_">Date:</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="heart_rate_r">Heart Rate</string>
    <string name="save">Save</string>
    <string name="pass">password</string>
</resources>