<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/textDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/textTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/textTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:textAppearanceMedium"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textSystolicLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/systolic"
            android:textAppearance="?android:textAppearanceMedium"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textDiastolicLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/diastolic"
            android:textAppearance="?android:textAppearanceMedium"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textHeartRateLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/heart_rate_r"
            android:textAppearance="?android:textAppearanceMedium"
            android:gravity="center"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textSystolic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:textAppearanceMedium"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textDiastolic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:textAppearanceMedium"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textHeartRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:textAppearanceMedium"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>
