<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/welcome_back"
            android:textColor="@color/primary"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/login_to_continue"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@color/input_background"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/input_background"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible" />

        </FrameLayout>


        <TextView
            android:id="@+id/createNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/create_new_account"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"

            />


    </LinearLayout>










    <!--<TextView-->
    <!--    android:id="@+id/textView6"-->
    <!--    android:layout_width="wrap_content"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    android:background="?attr/selectableItemBackground"-->
    <!--    android:clickable="true"-->
    <!--    android:onClick="SIGNUP"-->
    <!--    android:paddingLeft="10dp"-->
    <!--    android:paddingRight="10dp"-->
    <!--    android:text="Sign up"-->
    <!--    android:textColor="#5D9BE6"-->
    <!--    android:textSize="20dp"-->
    <!--    android:textStyle="italic"-->
    <!--    app:layout_constraintBottom_toBottomOf="parent"-->
    <!--    app:layout_constraintEnd_toEndOf="parent"-->
    <!--    app:layout_constraintStart_toStartOf="parent"-->
    <!--    app:layout_constraintTop_toTopOf="parent"-->
    <!--    app:layout_constraintVertical_bias="0.906"-->
    <!--    android:focusable="true"-->
    <!--    tools:ignore="UsingOnClickInXml" />-->

    <!--<TextView-->
    <!--    android:id="@+id/textView13"-->
    <!--    android:layout_width="wrap_content"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    android:text="Have no account yet ?"-->
    <!--    android:textColor="#000000"-->
    <!--    app:layout_constraintBottom_toBottomOf="parent"-->
    <!--    app:layout_constraintEnd_toEndOf="parent"-->
    <!--    app:layout_constraintHorizontal_bias="0.496"-->
    <!--    app:layout_constraintStart_toStartOf="parent"-->
    <!--    app:layout_constraintTop_toTopOf="parent"-->
    <!--    app:layout_constraintVertical_bias="0.853" />-->

    <!--<ImageView-->
    <!--    android:id="@+id/imageView11"-->
    <!--    android:layout_width="201dp"-->
    <!--    android:layout_height="190dp"-->
    <!--    app:layout_constraintBottom_toBottomOf="parent"-->
    <!--    app:layout_constraintEnd_toEndOf="parent"-->
    <!--    app:layout_constraintStart_toStartOf="parent"-->
    <!--    app:layout_constraintTop_toTopOf="parent"-->
    <!--    app:layout_constraintVertical_bias="0.031"-->
    <!--    app:srcCompat="@drawable/profile_pic" />-->


</ScrollView>








